fixed post & put in rest file
